reimplement upgrade event, make upgrade data immutable